--- a/index.html
+++ b/index.html
@@ -3,12 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./styles.css">
     <title>Microsoft Copy</title>
 </head>
-<header> Microsoft Big Picture</header>
+<header></header>
 <body>
-    
+    <!-- Featured product photo. We want this to be large and the first thing the user sees when visiting the website -->
+    <div id="featured-photo"> Featured Product Photo</div>
+    <!-- below are our containers to have  -->
+    <div id="icons">
+        <span> Icon 1 </span>
+        <span> Icon 2 </span>
+        <span> Icon 3 </span>
+        <span> Icon 4 </span>
+        <span> Icon 5 </span>
+        <span> Icon 6 </span>
+    </div>
+    <div id="mini-layout">
+        <!-- fist block and text below -->
+        <span> 
+            Block 1 
+            <div>
+                <img src="imagesource">
+            </div>
+            <div> text here :) </div>
+        </span>
+        <!-- Second block and text below -->
+        <span> 
+            Block 2 
+            <div>
+              <img src="imagesource">
+            </div>
+            <div> 
+                text here :D 
+            </div>
+        </span>
+        <!-- Third block and text below-->
+        <span> 
+            Block 3
+            <div>
+            <img src="imagesource">
+            </div>
+            <div> 
+                text here :D 
+            </div>
+         </span>
+<!-- Fourth Block and text below-->
+        <span> 
+            Block 4
+            <div>
+                <img src="imagesource">
+            </div>
+            <div> 
+                text here :D 
+            </div>
+         </span>
+    </div>
 </body>
 </html>
