--- a/index.html
+++ b/index.html
@@ -4,59 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="./styles.css">
     <title>Microsoft Copy</title>
 </head>
 <header></header>
 <body>
     <!-- Featured product photo. We want this to be large and the first thing the user sees when visiting the website -->
-    <div id="featured-photo"> Featured Product Photo</div>
-    <!-- below are our containers to have  -->
-    <div id="icons">
-        <span> Icon 1 </span>
-        <span> Icon 2 </span>
-        <span> Icon 3 </span>
-        <span> Icon 4 </span>
-        <span> Icon 5 </span>
-        <span> Icon 6 </span>
+    <div id="featured-photo"> 
+        <img src="http://placekitten.com/1000/150" alt="Featured Product Photo"> 
     </div>
-    <div id="mini-layout">
+    <!-- below are our containers to have icons in  -->
+    <div class="bottom-margin">
+        <span class="icon-padding"> <i class="fas fa-camera"> </i>  </span>
+        <span class="icon-padding">  <i class="fas fa-anchor"> </i> </span>
+        <span class="icon-padding"> <i class="fas fa-wrench"> </i> </span>
+        <span class="icon-padding">  <i class="fas fa-usd"> </i> </span>
+        <span class="icon-padding">  <i class="fas fa-eur"> </i> </span>
+    </div>
+    <div class="margin-bottom">
         <!-- fist block and text below -->
-        <span> 
-            Block 1 
+        <span class="icon-padding">
             <div>
-                <img src="imagesource">
+                <img src="https://placebear.com/200/300" alt="featured product">
             </div>
-            <div> text here :) </div>
+            <div> 
+                lorem ips amet, consectetur adipis  <br>
+                ac inter lorem ipsum dolor sit am 
+            </div>
+            <div>
+                <a href="http://placeholder.com/"> Preorder</a>
+            </div>
         </span>
         <!-- Second block and text below -->
         <span> 
-            Block 2 
             <div>
-              <img src="imagesource">
+              <img src="http://www.placecage.com/200/300" alt="Featured Product">
             </div>
             <div> 
-                text here :D 
+                lorem ips amet, consectetur adipis  <br>
+                ac inter lorem ipsum dolor sit am 
+            </div>
+            <div>
+                <a href="http://placeholder.com/"> Shop now</a>
             </div>
         </span>
         <!-- Third block and text below-->
         <span> 
-            Block 3
             <div>
-            <img src="imagesource">
+            <img src="http://www.placecage.com/g/200/300" alt="Featured Product">
             </div>
             <div> 
-                text here :D 
+                lorem ips amet, consectetur adipis  <br>
+                ac inter lorem ipsum dolor sit am 
+            </div>
+            <div>
+                <a href="http://placeholder.com/"> Shop Cages</a>
             </div>
          </span>
 <!-- Fourth Block and text below-->
         <span> 
-            Block 4
             <div>
-                <img src="imagesource">
+                <img src="http://www.placecage.com/c/200/300" alt="Featured Product">
             </div>
             <div> 
-                text here :D 
+                lorem ips amet, consectetur adipis  <br>
+                ac inter lorem ipsum dolor sit am  
+            </div>
+            <div> 
+                <a href="http://placeholder.com/"> Shop Nicolas</a>
             </div>
          </span>
     </div>
